# python_test

./: pyproject.toml
config/: settings.py  urls.py
surveys/: admin.py  forms.py  models.py  urls.py  views.py
surveys/migrations/: 0001_initial.py  0002_answer_user.py  0003_question_used.py  0004_remove_answer_question_remove_answer_user_and_more.py  0005_question_used.py
templates/: base.html
templates/includes/: footer.html  header.html
templates/surveys/: survey_list.html  survey_process.html
templates/users/: login.html  signup.html
users/: forms.py  urls.py  views.py
