[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["Parshin Dmitry <parshindi@mail.ru>"]
readme = "README.md"
packages = [{include = "python_test"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
